--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,8 +25,10 @@
     "@faker-js/faker": "^9.5.0",
     "@nestjs/apollo": "^13.0.3",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.0.3",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
